app/assets/stylesheets/layout/positioning.css.scss
body {
  padding: 0 1em 1em;
}

.form-actions > .button_to {
  // make sure a rails button_to form renders inline when it's in a bootstrap .form-actions line.
  display: inline-block;
  margin-bottom: 0;
}

.site-search {
  form {
    margin: 1em 0;
    text-align: left;
  }
}

.site-actions {
  padding-top: 1em;
  text-align: right;
}

.page-footer {
  margin-bottom: 1em;
  margin-top: 2em;

  .footer-text {
    margin-top: 1em;
    padding-top: 1.5em;
  }
}

.page-search {
  padding-top: 2em;
  text-align: right;
}

legend .pull-right {
  margin-top: .2em;
}

.unpadded {
  padding: 0;
}

.with-headroom {
  padding-top: 3em;
}

.with-footroom {
  padding-bottom: 3em;
}

.with-top-padding {
  padding-top: 2em;
}

.with-side-padding {
  padding-left: 2em;
  padding-right: 2em;
}

.stacked {
  dt {
    clear: both;
    float: left;
    width: 30%;
  }

  dd {
    clear: right;
    margin: 0 0 0 30%;
    width: 40%;
    word-wrap: break-word;
  }
}

.main-header,
.page-actions {
  margin-bottom: 30px;
  margin-top: 20px;
  padding-bottom: 9px;
}

.main-header {
  border-bottom: 1px solid $grayLighter;

  > .navbar {
    margin-bottom: 0;
  }
}

.main-header-with-actions {
  position: relative;

  .human-readable-type {
    display: block;
  }

  .main-header {
    margin-bottom: 0;

    h1 {
      margin-bottom: 0;
    }
  }

  .page-actions {
    margin: 0;
    padding: .5em 0 0;
  }
}

.page-actions {
  line-height: 3;
  text-align: right;
}

.section-actions {
  margin-bottom: 2em;
}

.attached-file + .section-actions,
.related-resources + .section-actions {
  border-top: 1px solid $gray-lightest;
  padding-top: 1em;
}

.search {
  > .row > .main-header {
    border-bottom: 0;
    margin-bottom: 24px;
    padding-bottom: 0;
  }

  .sidebar > h3:first-child {
    margin-top: -.4em;
  }

  .welcome-text > h2:first-child {
    margin-top: -.2em;
  }

  .call-to-action {
    text-align: center;
  }
}

legend + .control-group {
  margin-top: 0;
}

.container.flash-message .alert {
  margin-bottom:0;
  margin-top:20px;
}

